--- a/index.html
+++ b/index.html
@@ -45,7 +45,12 @@
 <hr><h3>
 <a name="installation" class="anchor" href="#installation"><span class="octicon octicon-link"></span></a>Installation</h3>
 
-<p><br><code>&gt; npm install intelligence</code></p>
+<p><code>&gt; npm install intelligence</code></p>
+
+<hr><h3>
+<a name="testing" class="anchor" href="#testing"><span class="octicon octicon-link"></span></a>Testing</h3>
+
+<p>Running <code>npm test</code> will run all tests located in the <code>/tests</code> directory.</p>
 
 <hr>
       </section>
